[gd_scene load_steps=71 format=3 uid="uid://bfl1kty837ftg"]

[ext_resource type="Script" path="res://Scripts/Players/Ninja_Frog/ninja_frog.gd" id="1_btbxh"]
[ext_resource type="Texture2D" uid="uid://i72432hlbhyo" path="res://Assets/Sprites/Main Characters/Appearing (96x96).png" id="2_hsxpm"]
[ext_resource type="Texture2D" uid="uid://c1pcnan64xnx7" path="res://Assets/Sprites/Main Characters/Desappearing (96x96).png" id="3_3kabj"]
[ext_resource type="Texture2D" uid="uid://d16o45owjby68" path="res://Assets/Sprites/Main Characters/Ninja Frog/Double Jump (32x32).png" id="4_1bu4f"]
[ext_resource type="Texture2D" uid="uid://cde3of4xwtti6" path="res://Assets/Sprites/Main Characters/Ninja Frog/Fall (32x32).png" id="5_oxfch"]
[ext_resource type="Texture2D" uid="uid://cdn0j3ytw6uca" path="res://Assets/Sprites/Main Characters/Ninja Frog/Hit (32x32).png" id="6_yoe5a"]
[ext_resource type="Texture2D" uid="uid://ce2lbv5dhvt55" path="res://Assets/Sprites/Main Characters/Ninja Frog/Idle (32x32).png" id="7_rxtsr"]
[ext_resource type="Texture2D" uid="uid://h8vhngbws54r" path="res://Assets/Sprites/Main Characters/Ninja Frog/Jump (32x32).png" id="8_rftft"]
[ext_resource type="Texture2D" uid="uid://qkkaq655i521" path="res://Assets/Sprites/Main Characters/Ninja Frog/Run (32x32).png" id="9_hv838"]
[ext_resource type="Texture2D" uid="uid://dgmfqmto86m2f" path="res://Assets/Sprites/Main Characters/Ninja Frog/Wall Jump (32x32).png" id="10_0m5sp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ivku"]
atlas = ExtResource("2_hsxpm")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkyty"]
atlas = ExtResource("2_hsxpm")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8jjk"]
atlas = ExtResource("2_hsxpm")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxler"]
atlas = ExtResource("2_hsxpm")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_38rbo"]
atlas = ExtResource("2_hsxpm")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmlkg"]
atlas = ExtResource("2_hsxpm")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu5yl"]
atlas = ExtResource("2_hsxpm")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gb5r"]
atlas = ExtResource("3_3kabj")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lve8"]
atlas = ExtResource("3_3kabj")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p803"]
atlas = ExtResource("3_3kabj")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y88r"]
atlas = ExtResource("3_3kabj")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pafec"]
atlas = ExtResource("3_3kabj")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tol7"]
atlas = ExtResource("3_3kabj")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivkk6"]
atlas = ExtResource("3_3kabj")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gdo4"]
atlas = ExtResource("4_1bu4f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fm15"]
atlas = ExtResource("4_1bu4f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo63s"]
atlas = ExtResource("4_1bu4f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8riy"]
atlas = ExtResource("4_1bu4f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q01x"]
atlas = ExtResource("4_1bu4f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbast"]
atlas = ExtResource("4_1bu4f")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf00x"]
atlas = ExtResource("5_oxfch")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flyf6"]
atlas = ExtResource("6_yoe5a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkkgi"]
atlas = ExtResource("6_yoe5a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2311"]
atlas = ExtResource("6_yoe5a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0iiy"]
atlas = ExtResource("6_yoe5a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62ohd"]
atlas = ExtResource("6_yoe5a")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5ym0"]
atlas = ExtResource("6_yoe5a")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m85ns"]
atlas = ExtResource("7_rxtsr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxola"]
atlas = ExtResource("7_rxtsr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1fj2"]
atlas = ExtResource("7_rxtsr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcwjk"]
atlas = ExtResource("7_rxtsr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r345b"]
atlas = ExtResource("7_rxtsr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jndy"]
atlas = ExtResource("7_rxtsr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhf5i"]
atlas = ExtResource("7_rxtsr")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b45r"]
atlas = ExtResource("7_rxtsr")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi7ut"]
atlas = ExtResource("7_rxtsr")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nagnt"]
atlas = ExtResource("7_rxtsr")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wpc3"]
atlas = ExtResource("7_rxtsr")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iiu8"]
atlas = ExtResource("8_rftft")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr5pq"]
atlas = ExtResource("9_hv838")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_462uf"]
atlas = ExtResource("9_hv838")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs5qu"]
atlas = ExtResource("9_hv838")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_inafm"]
atlas = ExtResource("9_hv838")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b4au"]
atlas = ExtResource("9_hv838")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fhl7"]
atlas = ExtResource("9_hv838")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuaa5"]
atlas = ExtResource("9_hv838")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6spl"]
atlas = ExtResource("9_hv838")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buoyk"]
atlas = ExtResource("9_hv838")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkp6x"]
atlas = ExtResource("9_hv838")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpnnt"]
atlas = ExtResource("9_hv838")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r8g3"]
atlas = ExtResource("9_hv838")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rem0f"]
atlas = ExtResource("10_0m5sp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttmml"]
atlas = ExtResource("10_0m5sp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nb4j"]
atlas = ExtResource("10_0m5sp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fx6m"]
atlas = ExtResource("10_0m5sp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lspmn"]
atlas = ExtResource("10_0m5sp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6fh2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ivku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkyty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8jjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxler")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38rbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmlkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu5yl")
}],
"loop": false,
"name": &"appearing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gb5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lve8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p803")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y88r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pafec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tol7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivkk6")
}],
"loop": false,
"name": &"desappearing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gdo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fm15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo63s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8riy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q01x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbast")
}],
"loop": false,
"name": &"double_jump",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf00x")
}],
"loop": true,
"name": &"fall",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flyf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkkgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2311")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0iiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62ohd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5ym0")
}],
"loop": false,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m85ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxola")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1fj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcwjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r345b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jndy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhf5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b45r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi7ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nagnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wpc3")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iiu8")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr5pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_462uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs5qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inafm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b4au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fhl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuaa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6spl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buoyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkp6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpnnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r8g3")
}],
"loop": true,
"name": &"run",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rem0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttmml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nb4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fx6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lspmn")
}],
"loop": true,
"name": &"wall_jump",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l741e"]
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kwop2"]
radius = 9.5
height = 23.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uaxkw"]
size = Vector2(2, 5)

[node name="ninja_frog" type="CharacterBody2D" groups=["player"]]
z_index = 2
position = Vector2(0, -32)
scale = Vector2(2, 2)
collision_layer = 16
script = ExtResource("1_btbxh")

[node name="animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h6fh2")
animation = &"idle"

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_l741e")

[node name="camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 640
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="delay_fall" type="Timer" parent="."]

[node name="wall_jump" type="RayCast2D" parent="."]
target_position = Vector2(10.5, 0)

[node name="damage_detection" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="damage_detection"]
position = Vector2(0, 3.5)
shape = SubResource("CapsuleShape2D_kwop2")

[node name="area_for_portal" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="area_for_portal"]
modulate = Color(0.211765, 0.152941, 1, 1)
position = Vector2(0, 13.5)
shape = SubResource("RectangleShape2D_uaxkw")

[connection signal="animation_finished" from="animation" to="." method="_on_animations_animation_finished"]
[connection signal="area_shape_entered" from="damage_detection" to="." method="_on_damage_detection_area_shape_entered"]
